# LeSwitcheur

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
brand/: logo-1024.avif  logo-256.avif  logo-512.avif
bundle/: AppIcon.icns  Info.plist  bundle.sh  dmg.sh  verify-version.sh
crates/switcheur/: Cargo.toml
crates/switcheur-core/: Cargo.toml
crates/switcheur-core/src/: app_match.rs  config.rs  exclusions.rs  file_manager.rs  js.rs  lib.rs  license.rs  matcher.rs  math.rs  model.rs  sort.rs  state.rs  url.rs
crates/switcheur-i18n/: Cargo.toml  build.rs
crates/switcheur-i18n/locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  pt.yml  zh.yml
crates/switcheur-i18n/src/: lib.rs
crates/switcheur-platform/: Cargo.toml  build.rs
crates/switcheur-platform/examples/: probe_windows.rs
crates/switcheur-platform/src/: lib.rs  zoxide.rs
crates/switcheur-platform/src/macos/: activate.rs  app_policy.rs  browser.rs  file_manager.rs  hotkey.rs  icons.rs  llm.rs  machine_id.rs  mod.rs  panel.rs  permissions.rs  programs.rs  quick_type.rs  recency.rs  spotlight.rs  startup.rs  system_switcher.rs  windows.rs
crates/switcheur-ui/: Cargo.toml
crates/switcheur-ui/src/: actions.rs  assets.rs  input.rs  lib.rs  list.rs  onboarding_view.rs  open_with_popover.rs  settings_view.rs  switcher_view.rs  thanks_view.rs  theme.rs
crates/switcheur/src/: main.rs
scripts/: test-bundle.sh
